--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -39,7 +39,7 @@
 
 
     <Button
-        android:id="@+id/LogInButton"
+        android:id="@+id/logInButton"
         android:layout_width="300dp"
         android:layout_height="70dp"
         android:layout_alignWithParentIfMissing="false"
