--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -138,7 +138,7 @@
             android:fontFamily="@font/lato"
             android:padding="10dp"
             android:text="Sign Up"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:textSize="18sp" />
     </LinearLayout>
 
