--- a/app/src/main/res/drawable/whitecircle.xml
+++ b/app/src/main/res/drawable/whitecircle.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape
+            android:shape="oval">
 
+            <solid
+                android:color="#FFFFFF"/>
+
+            <size
+                android:width="600dp"
+                android:height="600dp"/>
+            <stroke android:color="#9EDDFF"
+                    android:width="30dp"
+                />
+        </shape>
+    </item>
 </selector>
