--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -8,6 +8,46 @@
     android:backgroundTint="#6499E9"
     android:padding="0dp">
 
+    <LinearLayout
+        android:id="@+id/lay3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:translationY="350dp"
+        android:translationZ="10dp">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Friends"
+            android:textColor="#6499E9"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Groups"
+            android:textSize="20sp"/>
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Activity"
+            android:textSize="20sp"/>
+
+    </LinearLayout>
+
+
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton2"
         android:layout_width="wrap_content"
@@ -20,9 +60,7 @@
         android:contentDescription="add expense"
         android:src="@android:drawable/ic_input_add"
         app:backgroundTint="#6499E9"
-        app:fabCustomSize="70dp"
-        app:shapeAppearance="#9EDDFF"
-        app:shapeAppearanceOverlay="@color/white" />
+        app:fabCustomSize="70dp" />
 
     <ImageView
         android:id="@+id/circlebg"
@@ -38,7 +76,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         android:contentDescription="cricle"
         android:src="@drawable/hamburger" />
 
@@ -200,11 +238,13 @@
         android:src="@drawable/rectangle"
         android:translationY="180dp"
         android:translationZ="100dp" />
-
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"></LinearLayout>
-
-
+        android:layout_height="350dp"
+        android:translationY="400dp">
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    </androidx.core.widget.NestedScrollView>
 </RelativeLayout>
