--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,5 +2,7 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/lato</item>
+        <item>@font/montserrat_alternates_semibold</item>
+        <item>@font/montserrat_semibold</item>
     </array>
 </resources>
