--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -47,7 +47,7 @@
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:width="500dp"
-            android:background="#AEA5A5"
+            android:background="@drawable/rounded_editext"
             android:backgroundTint="#AEA5A5"
             android:backgroundTintMode="screen"
             android:ems="10"
@@ -58,10 +58,12 @@
             android:textColor="#000000"
             android:translationY="5dp"
             android:inputType="textEmailAddress"/>
+
         <TextView
             android:id="@+id/passwdt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:fontFamily="@font/montserrat"
             android:text="Password"
             android:textSize="20sp" />
@@ -71,7 +73,7 @@
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:width="500dp"
-            android:background="#AEA5A5"
+            android:background="@drawable/rounded_editext"
             android:backgroundTint="#AEA5A5"
             android:backgroundTintMode="screen"
             android:ems="10"
