--- a/app/src/main/res/drawable/rectangle1.xml
+++ b/app/src/main/res/drawable/rectangle1.xml
@@ -3,9 +3,9 @@
     <item >
         <shape android:shape="rectangle"  >
             <corners android:radius="50dip" />
-            <stroke android:width="1dip" android:color="#6499E9" />
+<!--            <stroke android:width="1dip" android:color="#6499E9" />-->
             <solid android:color="#FFFFFF"/>
-            <stroke android:width="2dp" android:color="#ECECEC"/>
+<!--            <stroke android:width="2dp" android:color="#ECECEC"/>-->
         </shape>
     </item>
 </selector>
