--- a/app/src/main/res/drawable/rectangle1.xml
+++ b/app/src/main/res/drawable/rectangle1.xml
@@ -2,9 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item >
         <shape android:shape="rectangle"  >
-            <corners android:radius="50dip" />
+            <corners android:radius="20dip" />
 <!--            <stroke android:width="1dip" android:color="#6499E9" />-->
-            <solid android:color="#FFFFFF"/>
+            <solid android:color="#F0F0F0"/>
+
 <!--            <stroke android:width="2dp" android:color="#ECECEC"/>-->
         </shape>
     </item>
