--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -5,15 +5,71 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#6497E7"
-    android:backgroundTint="#6498E8"
     android:padding="0dp">
+
+<!--    <ImageView-->
+<!--        android:id="@+id/wallet"-->
+<!--        android:layout_width="30dp"-->
+<!--        android:layout_height="30dp"-->
+<!--        android:layout_alignParentTop="true"-->
+<!--        android:layout_alignParentRight="true"-->
+<!--        android:layout_marginTop="15dp"-->
+<!--        android:layout_marginRight="20dp"-->
+<!--        android:tooltipText=" "-->
+<!--        android:src="@drawable/user" />-->
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/wallet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="110dp"
+        android:layout_marginRight="90dp"
+        android:clickable="true"
+        android:src="@drawable/wallet"
+        android:tooltipText=" "
+        app:backgroundTint="#FEFEFE" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addFriend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="90dp"
+        android:layout_marginLeft="90dp"
+        android:layout_marginTop="110dp"
+        android:layout_marginEnd="90dp"
+        android:layout_marginBottom="90dp"
+        android:clickable="true"
+        android:src="@drawable/user_plus"
+        android:tooltipText=" "
+        app:backgroundTint="#FEFEFE" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="30dp"
+        android:clickable="true"
+        android:foregroundTint="#6496E6"
+        android:src="@drawable/plus"
+        android:tint="#6496E6"
+        android:tooltipText="Add Expenses"
+        android:translationZ="220dp"
+        app:backgroundTint="#6496E6" />
 
     <com.google.android.material.tabs.TabLayout
         android:id='@+id/tablayout'
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#F0F0F0"
-        android:translationY="350dp"
+        android:layout_height="60dp"
+        android:background="#00FFFFFF"
+        android:translationY="300dp"
         android:translationZ="101dp">
 
         <com.google.android.material.tabs.TabItem
@@ -36,28 +92,19 @@
         android:id='@+id/viewpager'
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:translationZ="100dp">
+        android:translationZ="1dp">
 
     </androidx.viewpager2.widget.ViewPager2>
 
-
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:id="@+id/floatingActionButton2"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:clickable="true"-->
-<!--        android:src="@android:drawable/ic_input_add"-->
-<!--        android:translationX="170dp"-->
-<!--        android:translationY="290dp"-->
-<!--        android:translationZ="200dp" />-->
 
     <ImageView
         android:id="@+id/circlebg"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
         android:contentDescription="cricle"
         android:src="@drawable/whitecircle"
-        android:translationX="150dp"
+        android:tooltipText="Hellos"
         android:translationY="50dp" />
 
     <ImageView
@@ -70,13 +117,14 @@
         android:src="@drawable/hamburger" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/FirstLetter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:fontFamily="@font/montserrat"
         android:text="R"
         android:textSize="48sp"
-        android:translationX="183dp"
+        android:tooltipText="Hellos"
         android:translationY="63dp" />
 
     <TextView
