--- a/app/src/main/res/layout/addexpense.xml
+++ b/app/src/main/res/layout/addexpense.xml
@@ -114,12 +114,12 @@
             android:textSize="20sp"/>
 
         <EditText
-            android:id="@+id/editTextText2"
+            android:id="@+id/amount"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:inputType="text"
+            android:inputType="numberDecimal"
             android:hint="0.00" />
     </LinearLayout>
 
@@ -131,7 +131,7 @@
         android:translationY="200dp">
 
         <EditText
-            android:id="@+id/autoCompleteTextView2"
+            android:id="@+id/expnse"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
